docs: add api docs for /price-settings
