# docs/swagger.json
@@ -1,9 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Service for retrieving information about market electric price in Finland",
+        "description": "Service for retrieving information about market electric price in Finland.",
         "title": "Stormbreaker API (electric service)",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Anh Cao",
             "email": "anhcao4922@gmail.com"
@@ -57,7 +56,7 @@
                         }
                     },
                     "500": {
-                        "description": "various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
@@ -92,7 +91,7 @@
                         }
                     },
                     "500": {
-                        "description": "various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
@@ -121,19 +120,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "type": "string"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "401": {
+                        "description": "Unauthenticated/Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
@@ -152,6 +151,17 @@
                     "price-settings"
                 ],
                 "summary": "Creates a new price settings for user",
+                "parameters": [
+                    {
+                        "description": "user price settings",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PriceSettings"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -160,19 +170,31 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated/Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Settings not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "Settings exist already",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
@@ -199,19 +221,25 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated/Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Settings not found",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
@@ -230,6 +258,17 @@
                     "price-settings"
                 ],
                 "summary": "Updates the price settings for specific user",
+                "parameters": [
+                    {
+                        "description": "user price settings",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PriceSettings"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -238,19 +277,25 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated/Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Settings not found",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Various reasons: cannot fetch price from 3rd party, failed to read settings from db, etc.",
                         "schema": {
                             "type": "string"
                         }
